--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
-header-img: "img/post-bg-rwd.jpg"
+title: "About Me"
+description: "Hey, this is YXY."
+header-img: "img/about-bg-grass.jpg"
 ---
 
 <!-- Language Selector -->
@@ -15,25 +15,26 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>Every thing is possible</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>泥嚎，我是<strong>Yin Xuyue</strong>，女博士，程序猿，现在上海交大搬砖。
+	<br>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。如果有什么问题，可评论或邮件给我。</p>
+	
+    <p>研究方向：<br>
+	增强现实, 单目视觉6D位姿估计，单目视觉3D跟踪(包含但不限于SLAM)，机电产品视觉质检，视觉行为识别，深度学习零件识别，及一切和CV相关的衍生技能</p>
+	<p>职业技能：<br>
+	C++,  OpenCV, ARtoolkit, ALVAR, osgART, OSG, OpenGL, Eigen, MFC, SQL, Matlab基本操作及多种视觉工具箱, Python</p>
+	<p>学术技能：<br>
+	matplotlib, Latex(各出版社期刊，各类会议，简历), Markdown, Endnote, etc.</p>
+	<p>发表论文：<br>
+	待补充</p>
+	<p>软件登记与专利<br>
+	待补充</p>
+	<p>英文水平<br>
+	CET4-609, CET6-578, TOEFL-88</p>
+	<p>业余爱好<br>
+	小提琴-lv.7，钢琴，游泳，瑜伽，滑冰，手账，摄影，收纳，烘培，烹饪，etc.</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
-
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
-    <p></p>
-    
-    <h5>Talks</h5>
-
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
 </div>
 
 <!-- English Version -->
