--- a/about.html
+++ b/about.html
@@ -27,9 +27,18 @@ header-img: "img/about-bg-grass.jpg"
 	<p>学术技能：<br>
 	matplotlib, Latex(各出版社期刊，各类会议，简历), Markdown, Endnote, etc.</p>
 	<p>发表论文：<br>
-	待补充</p>
+	Yin X, Fan X, Zhu W, et al. Synchronous AR assembly assistance and monitoring system based on ego-centric vision[J]. Assembly Automation, 2018. (published, to appear online)<br>
+	Yin X, Fan X, Wang J, et al. An Automatic Interaction Method Using Part Recognition Based on Deep Network for Augmented Reality Assembly Guidance[C]// ASME 2018 International Design Engineering Technical Conferences and Computers and Information in Engineering Conference. 2018. (published, to appear online)<br>
+	尹旭悦，范秀敏，王磊，等. 航天产品装配作业增强现实引导训练系统及应用[J]. 航空制造技术，2018，61（1/2）：48-53.<br>尹旭悦，范秀敏，顾岩，等.动态视觉手势识别下手工装配时序控制的智能防错方法[J].计算机集成制造系统, 2017, 23(7):1457-1468.<br>
+	王磊，尹旭悦，范秀敏，等. 基于视觉信息的航天器装配智能引导方法研究[C].IMCC 国际制造会议精密装配技术专场,2017.<br>
+	Liu K, Yin X, Fan X, et al. Virtual assembly with physical information: a review[J]. Assembly Automation, 2015, 35(3): 206-220. <br>
+	Yin X, Gu Y, Qiu S, et al. VR&AR Combined Manual Operation Instruction System on Industry Products: A Case Study[C]. Virtual Reality and Visualization (ICVRV), 2014 International Conference on, 2014: 65-72.
+	</p>
 	<p>软件登记与专利<br>
-	待补充</p>
+	发明专利《手工装配视觉检测防错方法及系统》，公开号CN106530293A，实审中。<br>
+	《装配工艺智能引导辅助系统V1.0》，软件登记号：2017SR720403。<br>
+    《装配工艺智能引导信息规划系统v1.0》，软件登记号：2018SR055821。
+	</p>
 	<p>英文水平<br>
 	CET4-609, CET6-578, TOEFL-88</p>
 	<p>业余爱好<br>
