--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@ header-img: "img/about-bg-grass.jpg"
     <!--copied from markdown -->
     <blockquote><p>Every thing is possible</p></blockquote>
 
-    <p>泥嚎，我是<strong>Yin Xuyue</strong>，女博士，程序猿，现在上海交大搬砖。
+    <p>泥嚎，我是<strong>阿九</strong>，女博士，程序猿，现在上海交大搬砖。
 	<br>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。如果有什么问题，可评论或邮件给我。</p>
-	
+
     <p>研究方向：<br>
 	增强现实, 单目视觉6D位姿估计，单目视觉3D跟踪(包含但不限于SLAM)，机电产品视觉质检，视觉行为识别，深度学习零件识别，及一切和CV相关的衍生技能</p>
 	<p>职业技能：<br>
@@ -42,7 +42,7 @@ header-img: "img/about-bg-grass.jpg"
 	<p>英文水平<br>
 	CET4-609, CET6-578, TOEFL-88</p>
 	<p>业余爱好<br>
-	小提琴-lv.7，钢琴，游泳，瑜伽，滑冰，手账，摄影，收纳，烘培，烹饪，etc.</p>
+	小提琴，钢琴，游泳，瑜伽，滑冰，手账，摄影，收纳，烘培，烹饪，etc.</p>
 
 </div>
 
@@ -54,7 +54,7 @@ header-img: "img/about-bg-grass.jpg"
     <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
+
     <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
 
     <h5>Talks</h5>
@@ -154,4 +154,3 @@ header-img: "img/about-bg-grass.jpg"
 </script>
 <!-- disqus 公共JS代码 end -->
 {% endif %}
-
