--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "情深不寿 慧极必伤 强极则辱 无欲则刚"
 ---
 
 {% for post in paginator.posts %}
