--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/about-bg-grass.jpg"
     <!--copied from markdown -->
     <blockquote><p>Every thing is possible</p></blockquote>
 
-	<br>这是我用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的个人博客，用于记录开发学习等乱七八糟的东西</p>
+	<br>This is my personal blog built using <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> hich is used to record all kinds of things related to development and learning.</p>
 
     <p>My R&D field：<br>
 	Augmented Reality/extended Reality(AR/XR), monocular pose estimation, hybrid 3D Tracking，Computer-aided Manufacturing(CAM)</p>
