--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "情深不寿 慧极必伤 强极则辱 无欲则刚"
+description: "The best time to plant a tree was five years ago, and the second best time is now."
 ---
 
 {% for post in paginator.posts %}
